...
        let alertText = presenter.getGameEndText(quiz: result)
        
        let alertModel = AlertModel(
            title: result.title,
            message: alertText,
            buttonText: result.buttonText,
            accesibilityIdentifier: "Game results",
            completion: { [weak self] in
                guard let self = self else { return }
                
                presenter.restartGame()
            }
        )
...
